--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dexie": "^4.3.0",
     "dexie-react-hooks": "^4.2.0",
     "firebase": "^12.9.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
