--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dexie-react-hooks": "^4.2.0",
     "firebase": "^12.9.0",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
